--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -114,7 +114,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-sm">
+                      <div class="col-sm" *ngIf="applicationForm.operationTypeId?.code == '001002'">
                         <label class="control-labels" translate>claim.encumbrance</label>
                         <span class="text-danger" *ngIf="!applicationForm.encumbrance">&nbsp;*</span>
                         <div class="col-sm">
@@ -135,7 +135,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="row">
+                    <div class="row" *ngIf="applicationForm.operationTypeId?.code == '001002'">
                       <div class="col-sm-6">
                         <label class="control-labels" translate>claim.barter</label>
                         <span class="text-danger" *ngIf="!applicationForm.exchange">&nbsp;*</span>
@@ -156,7 +156,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-sm-6">
+                      <div class="col-sm-6" *ngIf="applicationForm.operationTypeId?.code == '001002'">
                         <label class="control-labels" translate>claim.commonOwnership</label>
                         <span class="text-danger" *ngIf="!applicationForm.sharedOwnershipProperty">&nbsp;*</span>
                         <div class="col-sm">
@@ -217,53 +217,11 @@
                         <label for="name" class="col-sm-12 col-form-label" translate>claim.possibleBargaining</label>
                       </div>
                     </div>
-                    <div class="row">
+                    <div class="row" *ngFor="let possible of possibleReasonForBidding">
                       <div class="col-sm-4">
                         <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="meet">
-                          <label class="custom-control-label" for="meet" translate>claim.theSizeOfTrades.meet</label>
-                        </div>
-                      </div>
-                      <div class="col-sm-4">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="cashPayment">
-                          <label class="custom-control-label" for="cashPayment" translate>claim.theSizeOfTrades.cashPayment</label>
-                        </div>
-                      </div>
-                      <div class="col-sm-4">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="lowDemand">
-                          <label class="custom-control-label" for="lowDemand"
-                                 translate>claim.theSizeOfTrades.lowDemand</label>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-sm-4">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="giff">
-                          <label class="custom-control-label" for="giff" translate>claim.theSizeOfTrades.giff</label>
-                        </div>
-                      </div>
-                      <div class="col-sm-4">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="fastSell">
-                          <label class="custom-control-label" for="fastSell"
-                                 translate>claim.theSizeOfTrades.fastSell</label>
-                        </div>
-                      </div>
-                      <div class="col-sm-4">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="mortgageProblems">
-                          <label class="custom-control-label" for="mortgageProblems" translate>claim.theSizeOfTrades.mortgageProblems</label>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="other">
-                          <label class="custom-control-label" for="other" translate>claim.theSizeOfTrades.other</label>
+                          <input type="checkbox" class="custom-control-input" id="meet" name="{{possible.id}}">
+                          <label class="custom-control-label" for="meet">{{possible.label}}</label>
                         </div>
                       </div>
                     </div>
@@ -578,7 +536,7 @@
           </div>
         </div>
         <br/>
-        <div class="row">
+        <div class="row" *ngIf="applicationForm.operationTypeId?.code == '001002'">
           <div class="col-sm">
             <div class="accordion" id="accordionAboutObject">
               <div class="card z-depth-0 bordered">
@@ -874,6 +832,7 @@
                                   <label for="name" class="col-sm-5 col-form-label" translate>claim.material</label>
                                   <div class="col-sm-7">
                                     <ng-select
+                                      [items]="materials"
                                       [(ngModel)]="applicationForm.materialOfConstruction"
                                       formControlName="materialOfConstruction"
                                       placeholder="{{ 'patterns.chooseElement' | translate }}">
