--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,6 @@
-@import "~@ng-select/ng-select/themes/default.theme.css";
+//@import "~@ng-select/ng-select/themes/default.theme.css";
 @import "~angular-notifier/styles";
+@import "~@ng-select/ng-select/themes/material.theme.css";
 
 /* You can add global styles to this file, and also import other style files */
 body {
@@ -28,4 +29,24 @@ body {
   text-align: center!important;;
   font-size: 12px!important;;
   line-height: 1.42857!important;
+}
+
+.required {
+  .ng-select {
+    .ng-placeholder {
+      &:after {
+        content: ' *';
+        color: red;
+      }
+    }
+  }
+}
+
+
+ng-select {
+  margin-top: 10px;
+}
+
+.md-form {
+  margin-bottom: 1rem;
 }
