--- a/frontend/src/app/claims/create-claim/create-claim.component.scss
+++ b/frontend/src/app/claims/create-claim/create-claim.component.scss
@@ -1,18 +1,23 @@
-fieldset.scheduler-border {
-  border: 1px groove #ddd !important;
-  padding: 0 1.4em 1.4em 1.4em !important;
-  margin: 0 0 1.5em 0 !important;
-  -webkit-box-shadow:  0px 0px 0px 0px rgba(0, 0, 0, 0.125);
-  box-shadow:  0px 0px 0px 0px rgba(0, 0, 0, 0.125);
-}
-
-legend.scheduler-border {
-  text-align: left !important;
-  width:auto;
-  padding:0 10px;
-  border-bottom:none;
-}
-
 .card-bg {
   background-color: #f0f7fc;
+}
+
+fieldset {
+  margin: 0;
+  xmin-width: 0;
+  padding: 10px;
+  position: relative;
+  border-radius: 4px;
+  padding-left: 10px !important;
+}
+
+legend {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 0px;
+  width: 35%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px 5px 5px 10px;
+  background-color: #ffffff;
 }
