--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -52,7 +52,7 @@
       <br>
       <div class="row" cdkDropListGroup>
         <div class="col-sm">
-          <div class="alert bg-primary text-white font-weight-bolder" role="alert" translate>board.firstContact</div>
+          <div class="alert bg-primary text-white font-weight-bolder boardTitle" role="alert" translate>board.firstContact</div>
           <br/>
           <div
             cdkDropList
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="alert alert-success" role="alert" translate>board.meet</div>
+          <div class="alert alert-success boardTitle" role="alert" translate>board.meet</div>
           <br/>
           <div
             cdkDropList
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="alert alert-info" role="alert" translate>board.dvou</div>
+          <div class="alert alert-info boardTitle" role="alert" translate>board.dvou</div>
           <br/>
           <div
             cdkDropList
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="alert alert-dark" role="alert" translate>board.adv</div>
+          <div class="alert alert-dark boardTitle" role="alert" translate>board.adv</div>
           <br/>
           <div
             cdkDropList
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="alert alert-warning" role="alert" translate>board.photoset</div>
+          <div class="alert alert-warning boardTitle" role="alert" translate>board.photoset</div>
           <br/>
           <div
             cdkDropList
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="alert alert-danger" role="alert" translate>board.show</div>
+          <div class="alert alert-danger boardTitle" role="alert" translate>board.show</div>
           <br/>
           <div
             cdkDropList
@@ -184,7 +184,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div class="alert alert-light" role="alert" translate>board.closedContract</div>
+          <div class="alert alert-light boardTitle" role="alert" translate>board.closedContract</div>
           <br/>
           <div
             cdkDropList
